# tristan-mp-v2

./: .gitignore  CMakeLists.txt  configure.py
notebooks/docs/: README.md
runs/phase7/: README.md
runs/phase7c/: README.md  input_phase7c_control_uniformT  input_phase7c_demo  validate_phase7c.py
runs/phase7d/: README.md  input_phase7d_demo  validate_phase7d.py
runs/phase8/: README.md  input_phase8a_control  input_phase8a_long_control  validate_phase8a.py
slurm/: phase7c.slurm  phase7c_control.slurm  phase7d.slurm  phase8a.slurm  phase8a_long.slurm
src/: CMakeLists.txt  global_namespace.F90  main_stub.cpp
src/algorithms/: current_deposit.F90
src/communications/: exchange_array.F90  exchange_currents.F90  exchange_fields.F90  exchange_particles.F90
src/io/: output_logistics.F90  write_history.F90  write_slice.F90  write_tot.F90  write_tot_flds.F90
src/main/: initialize.F90  tristanmainloop.F90
src/particles/: particle_logistics.F90  particles.F90
src/restart/: restart.F90
user/: user_1d_antenna_shock.F90  user_alfven.F90  user_anisotropy.F90  user_anisotropy.c  user_annihilation_5a.F90  user_early_universe_3a.F90  user_early_universe_3b.F90  user_harris.F90  user_mri_4a.F90  user_mri_4b.F90  user_mri_7.F90  user_mri_7c.F90  user_mri_7d.F90  user_mri_8a.F90
